--- a/src/Pages/Todo/index.scss
+++ b/src/Pages/Todo/index.scss
@@ -73,4 +73,75 @@
     font-weight: 700;
     margin-left: 10px;
   }
+  &-modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  &-innerModal {
+    background-color: white;
+    width: 400px;
+    height: 266px;
+    position: absolute;
+    > .header {
+      height: 60px;
+      background-color: #d4d4d4;
+      display: flex;
+      align-items: center;
+      padding: 0 10px;
+      font-weight: 700;
+      .close {
+        margin-left: auto;
+        margin-right: 5px;
+        font-size: 20px;
+        cursor: pointer;
+      }
+    }
+    > .body {
+      padding: 20px 25px;
+      display: flex;
+      flex-direction: column;
+      > * {
+        height: 50px;
+        display: flex;
+        align-items: center;
+      }
+    }
+    &--input {
+      margin-left: 10px;
+      border-radius: 5px;
+      padding: 7px;
+      border: 1px solid #d4d4d4;
+      width: 80%;
+    }
+  }
+  &-footer {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    &--add {
+      margin-left: auto;
+      background-color: green;
+      color: white;
+      width: 60px;
+      height: 40px;
+      border-radius: 5px;
+      border: none;
+    }
+    &--cancel {
+      margin-right: 10px;
+      width: 60px;
+      height: 40px;
+      border-radius: 5px;
+      border: none;
+      margin-left: 10px;
+    }
+  }
 }
