--- a/src/Pages/Todo/index.scss
+++ b/src/Pages/Todo/index.scss
@@ -37,11 +37,17 @@
   &-right {
     margin-left: 20px;
     width: 70%;
+    height: 100%;
     padding: 20px 10px;
     background-color: white;
     border-radius: 7px;
     box-shadow: 0px 4px 12px rgba(25, 31, 40, 0.12);
     max-height: 80%;
+    &.none {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
   &-item {
     display: flex;
@@ -143,5 +149,30 @@
       border: none;
       margin-left: 10px;
     }
+  }
+}
+.info {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+.info-item {
+  padding: 20px 5px;
+  display: flex;
+  align-items: center;
+  &--input {
+    width: 200px;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  &--title {
+    font-weight: 700;
+    width: 60px;
+    display: inline-block;
+  }
+  &--button {
+    margin-left: auto;
+    margin-top: auto;
   }
 }
