--- a/src/Pages/Todo/index.scss
+++ b/src/Pages/Todo/index.scss
@@ -70,7 +70,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: green;
     color: white;
     font-weight: 700;
   }
@@ -134,7 +133,7 @@
     align-items: center;
     &--add {
       margin-left: auto;
-      background-color: green;
+      background-color: #2c5bf2;
       color: white;
       width: 60px;
       height: 40px;
@@ -174,5 +173,16 @@
   &--button {
     margin-left: auto;
     margin-top: auto;
+    > * {
+      padding: 10px;
+      background-color: #2c5bf2;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    > * + * {
+      margin-left: 10px;
+    }
   }
 }
